location: Something went wrong and toronto store overlap fixed

--- a/find-coffee-stores/styles/Home.module.css
+++ b/find-coffee-stores/styles/Home.module.css
@@ -44,6 +44,9 @@
 
 }
 
+.sectionWrapper {
+  margin-top: 5rem;
+}
 /** Breakpoints:
   sm: min-width: 640px;
   md: min-width: 768px;
